Bug 41653 - Article Feedback CTA buttons are hard to read in Monobook skin

--- a/modules/jquery.articleFeedbackv5/jquery.articleFeedbackv5.css
+++ b/modules/jquery.articleFeedbackv5/jquery.articleFeedbackv5.css
@@ -662,7 +662,6 @@
 	padding-top: 0;
 	padding-bottom: 0;
 	text-align: center;
-	color: #fff;
 	/*text-shadow: 1px 1px 1px #000;*/
 	/*padding: 1px 30px 0 0;*/
 	/* @embed */
@@ -1015,4 +1014,3 @@
 	/* @embed */
 	background-image: url(images/tab_x_on.png);
 }
-
